[metadata]
name = advent-cli
version = 0.1.1a

[options]
packages = advent_cli
python_requires = >=3.7
install_requres = 
    beautifulsoup4 ==4.10.0
    markdownify ==0.10.0
    pytz ==2021.1
    requests ==2.26.0
    tabulate ==0.8.9
    termcolor ==1.1.0

[options.extras_require]
test = 
    pytest ==6.2.5
    pytest-pycodestyle ==2.2.0

[options.entry_points]
console_scripts = 
    advent = advent_cli.cli:main

[tool:pytest]
addopts = --pycodestyle --cache-clear

[pycodestyle]
max-line-length = 95
exclude = 20[0-9][0-9]/*