[metadata]
name = advent-cli
version = 0.2.2a
description = Advent of Code command-line interface.
url = https://github.com/fergusch/advent-cli
author = Christian Ferguson
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
packages = advent_cli
python_requires = >=3.7
install_requires = 
    beautifulsoup4 >= 4.10.0
    markdownify >= 0.10.0
    pytz >= 2021.1
    requests >= 2.26.0
    tabulate >= 0.8.9
    termcolor >= 1.1.0
    windows-curses >= 2.3.0;platform_system=='Windows'

[options.extras_require]
test = 
    freezegun >= 1.1.0
    mock >= 4.0.3
    pytest >= 6.2.5
    pytest-cov >= 3.0.0
    pytest-clarity >= 1.0.1
    pytest-pycodestyle >= 2.2.0

[options.entry_points]
console_scripts = 
    advent = advent_cli.cli:main

[tool:pytest]
addopts = 
    --cov advent_cli 
    --cov-report xml
    --cov-fail-under 80
    --pycodestyle
    --cache-clear 
    -vv

[coverage:run]
omit = advent_cli/_*.py

[pycodestyle]
max-line-length = 95
exclude = 20[0-9][0-9]/*
